--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -195,7 +195,7 @@ CONFIG_PCI_MESON=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_ALLOW_DEV_COREDUMP is not set
-CONFIG_CONNECTOR=m
+CONFIG_CONNECTOR=y
 CONFIG_ARM_SCPI_PROTOCOL=y
 CONFIG_DMI_SYSFS=m
 CONFIG_SYSFB_SIMPLEFB=y
@@ -216,17 +216,16 @@ CONFIG_BLK_DEV_RAM=y
 CONFIG_NVME_TARGET=m
 CONFIG_DUMMY_IRQ=m
 CONFIG_SRAM=y
-CONFIG_SCSI=y
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
 CONFIG_BLK_DEV_SR=y
 CONFIG_SCSI_SAS_LIBSAS=y
-CONFIG_ATA=m
+CONFIG_ATA=y
 CONFIG_SATA_AHCI=m
 CONFIG_SATA_AHCI_PLATFORM=m
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
-CONFIG_DM_CRYPT=y
+CONFIG_DM_CRYPT=m
 CONFIG_DM_INIT=y
 CONFIG_DM_UEVENT=y
 CONFIG_NETDEVICES=y
@@ -386,6 +385,7 @@ CONFIG_RTW88_8821CE=m
 # CONFIG_WLAN_VENDOR_SILABS is not set
 # CONFIG_WLAN_VENDOR_ST is not set
 # CONFIG_WLAN_VENDOR_TI is not set
+CONFIG_88XXAU=m
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
 CONFIG_USB_NET_RNDIS_WLAN=m
@@ -427,11 +427,17 @@ CONFIG_HW_RANDOM_OPTEE=m
 # CONFIG_RANDOM_TRUST_BOOTLOADER is not set
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX=y
+CONFIG_I2C_ARB_GPIO_CHALLENGE=m
+CONFIG_I2C_MUX_GPIO=m
+CONFIG_I2C_MUX_GPMUX=m
 CONFIG_I2C_MUX_PCA954x=y
 CONFIG_I2C_MUX_PINCTRL=y
+CONFIG_I2C_MUX_REG=m
+CONFIG_I2C_DEMUX_PINCTRL=m
 CONFIG_I2C_DESIGNWARE_PLATFORM=y
 CONFIG_I2C_GPIO=y
 CONFIG_I2C_MESON=y
+CONFIG_I2C_TINY_USB=m
 CONFIG_I2C_SLAVE=y
 CONFIG_SPI=y
 CONFIG_SPI_GPIO=y
@@ -446,7 +452,9 @@ CONFIG_PINCTRL=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_DWAPB=y
 CONFIG_GPIO_GENERIC_PLATFORM=y
+CONFIG_GPIO_SYSCON=y
 CONFIG_GPIO_PCA953X=m
+CONFIG_GPIO_PISOSR=m
 CONFIG_POWER_RESET_ODROID=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
@@ -455,27 +463,43 @@ CONFIG_POWER_RESET_RESTART=y
 CONFIG_POWER_RESET_SYSCON=y
 CONFIG_POWER_RESET_SYSCON_POWEROFF=y
 CONFIG_SYSCON_REBOOT_MODE=y
+CONFIG_CHARGER_GPIO=m
+CONFIG_SENSORS_AXI_FAN_CONTROL=m
 CONFIG_SENSORS_ARM_SCPI=y
-CONFIG_SENSORS_GPIO_FAN=m
-CONFIG_SENSORS_PWM_FAN=m
+CONFIG_SENSORS_ASPEED=m
+CONFIG_SENSORS_GL518SM=m
+CONFIG_SENSORS_GL520SM=m
+CONFIG_SENSORS_GPIO_FAN=y
+CONFIG_SENSORS_PWM_FAN=y
 CONFIG_THERMAL=y
+CONFIG_THERMAL_NETLINK=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_FAIR_SHARE=y
 CONFIG_THERMAL_GOV_BANG_BANG=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
 CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
+CONFIG_THERMAL_MMIO=m
+CONFIG_GENERIC_ADC_THERMAL=m
 CONFIG_KHADAS_MCU_FAN_THERMAL=m
 CONFIG_WATCHDOG=y
+CONFIG_GPIO_WATCHDOG=m
+CONFIG_DW_WATCHDOG=m
 CONFIG_MESON_GXBB_WATCHDOG=y
 CONFIG_MESON_WATCHDOG=y
+CONFIG_SSB=y
+CONFIG_BCMA=y
 CONFIG_MFD_SEC_CORE=y
+CONFIG_MFD_SIMPLE_MFD_I2C=y
 CONFIG_MFD_KHADAS_MCU=m
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
+CONFIG_REGULATOR_USERSPACE_CONSUMER=m
 CONFIG_REGULATOR_FAN53555=y
+CONFIG_REGULATOR_FAN53880=y
 CONFIG_REGULATOR_GPIO=y
 CONFIG_REGULATOR_PWM=y
+CONFIG_REGULATOR_VCTRL=y
 CONFIG_RC_CORE=y
 CONFIG_BPF_LIRC_MODE2=y
 CONFIG_LIRC=y
@@ -848,10 +872,11 @@ CONFIG_DMABUF_HEAPS=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
 CONFIG_DMABUF_HEAPS_CMA=y
 CONFIG_AUXDISPLAY=y
-CONFIG_UIO=m
+CONFIG_UIO=y
 CONFIG_UIO_PDRV_GENIRQ=m
 CONFIG_UIO_DMEM_GENIRQ=m
 CONFIG_UIO_PCI_GENERIC=m
+CONFIG_VIRT_DRIVERS=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_VHOST_MENU is not set
 CONFIG_STAGING=y
@@ -875,21 +900,32 @@ CONFIG_DEVFREQ_GOV_PERFORMANCE=m
 CONFIG_DEVFREQ_GOV_POWERSAVE=m
 CONFIG_DEVFREQ_GOV_USERSPACE=m
 CONFIG_DEVFREQ_GOV_PASSIVE=m
+CONFIG_PM_DEVFREQ_EVENT=y
 CONFIG_EXTCON=y
 CONFIG_EXTCON_GPIO=m
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
 CONFIG_IIO_TRIGGERED_BUFFER=m
-CONFIG_IIO_CONFIGFS=m
+CONFIG_IIO_SW_DEVICE=m
+CONFIG_IIO_SW_TRIGGER=m
+CONFIG_IIO_TRIGGERED_EVENT=m
 CONFIG_PWM=y
+CONFIG_PWM_DWC=y
+CONFIG_PWM_GPIO=y
 CONFIG_PWM_MESON=y
-# CONFIG_ARM_PMU is not set
+CONFIG_RESET_TI_SYSCON=m
+CONFIG_ARM_CCI_PMU=m
 CONFIG_MESON_EFUSE=y
 CONFIG_MESON_MX_EFUSE=y
-CONFIG_MUX_GPIO=y
+CONFIG_STM=y
+CONFIG_STM_PROTO_BASIC=m
+CONFIG_STM_SOURCE_CONSOLE=m
+CONFIG_STM_SOURCE_HEARTBEAT=m
 CONFIG_TEE=y
 CONFIG_OPTEE=y
+CONFIG_MUX_GPIO=y
+CONFIG_MUX_MMIO=m
 CONFIG_VALIDATE_FS_PARSER=y
 CONFIG_EXT2_FS=m
 CONFIG_EXT2_FS_XATTR=y
@@ -920,7 +956,6 @@ CONFIG_EXFAT_FS=m
 CONFIG_NTFS3_FS=m
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
-CONFIG_CONFIGFS_FS=y
 CONFIG_HFS_FS=m
 CONFIG_HFSPLUS_FS=m
 CONFIG_SQUASHFS=y
