--- a/defconfig/rk356x_defconfig
+++ b/defconfig/rk356x_defconfig
@@ -293,8 +293,11 @@ CONFIG_PCI_IOV=y
 CONFIG_PCI_PRI=y
 CONFIG_PCI_PASID=y
 CONFIG_HOTPLUG_PCI=y
+CONFIG_PCI_HOST_GENERIC=m
 CONFIG_PCIE_ROCKCHIP_HOST=y
+CONFIG_PCIE_DW_PLAT_HOST=y
 CONFIG_PCIE_ROCKCHIP_DW_HOST=y
+CONFIG_CXL_BUS=m
 CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
@@ -710,9 +713,12 @@ CONFIG_TYPEC_FUSB302=y
 CONFIG_TYPEC_DP_ALTMODE=y
 CONFIG_MMC=y
 CONFIG_MMC_SDHCI=y
+CONFIG_MMC_SDHCI_PCI=m
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_OF_ARASAN=y
+CONFIG_MMC_SDHCI_OF_DWCMSHC=m
 CONFIG_MMC_DW=y
+CONFIG_MMC_DW_PCI=m
 CONFIG_MMC_DW_ROCKCHIP=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
@@ -745,7 +751,7 @@ CONFIG_DW_EDMA_PCIE=m
 CONFIG_DMABUF_HEAPS=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
 CONFIG_DMABUF_HEAPS_CMA=y
-CONFIG_UIO=m
+CONFIG_UIO=y
 CONFIG_UIO_PDRV_GENIRQ=m
 CONFIG_UIO_DMEM_GENIRQ=m
 CONFIG_UIO_PCI_GENERIC=m
